    owned by other threads anymore.
  * bug fix: FIND on lists called KEY outside the specified
    subsequence. (reported by budden)
  * bug fix: LOG doesn't use single-float intermediate results when
    given mixed integer and double-float arguments, leading to better
    precision. (reported by Bob Felts)
  * bug fix: LOG with base zero returned values of inconsistent type.

changes in sbcl-1.0.20 relative to 1.0.19:
  * minor incompatible change: OPTIMIZE qualities
    SB-C::STACK-ALLOCATE-DYNAMIC-EXTENT, SB-C::STACK-ALLOCATE-VECTOR,
    and SB-C::STACK-ALLOCATE-VALUE-CELLS no longer exist. See documentation
    and SB-EXT:*STACK-ALLOCATE-DYNAMIC-EXTENT* for details.
  * documentation: some slot access efficiency guidelines have been
    added to the user manual.
  * optimization: ASSOC-IF, ASSOC-IF-NOT, MEMBER-IF, MEMBER-IF-NOT,
    RASSOC, RASSOC-IF, and RASSOC-IF-NOT are now equally efficient
    as ASSOC and MEMEBER.
  * optimization: calls to ASSOC, MEMBER, and RASSOC can be transformed
    to more efficient EQ-comparison versions more often.
  * optimization: enhanced derivation of DOLIST iteration variable type
    for constant lists.
  * optimization: constant folding of simple (LIST ...) forms as DOLIST
    arguments.
  * optimization: runtime lookup of function definitions can be
    elided in more cases, eg: (let ((x 'foo)) (funcall foo)).
  * optimization: compiler is able to derive the return type of
    (AREF (THE STRING X) Y) as being CHARACTER.
  * optimization: CLRHASH on empty hash-tables no longer does pointless
    work. (thanks to Alec Berryman)
  * optimization: REPLACE deftransforms don't punt when :START1 or
    :START2 is given
  * bug fix: compiling DESTRUCTURING-BIND on constant list arguments
    no longer emits a code deletion note. (reported by Andrew
    Gasparovic)
  * bug fix: bogus odd-number-of-keywords STYLE-WARNINGs from calls to
    functions with an odd number of &OPTIONAL arguments, a &REST